# email-validator-grpc-mcp

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  MODULE.bazel  README.org  buf.yaml  go.mod  go.sum
.cursor/rules/: dev_workflow.mdc
.github/workflows/: bazel-test.yml
.taskmaster/docs/: email_validator_prd.md
.taskmaster/reports/: task-complexity-report.json
proto/: BUILD.bazel
proto/email_validator/: BUILD.bazel
proto/email_validator/v1/: BUILD.bazel  email_validator.proto
scripts/: email_validator_prd.md
token/: BUILD.bazel  manager.go  redis_storage.go  redis_storage_test.go  storage.go  storage_test.go  token.go  token_test.go
token/managertest/: BUILD.bazel  manager_integration_test.go
token/storage/memory/: BUILD.bazel  memory.go  memory_test.go
token/storage/redis/: BUILD.bazel  redis.go  redis_test.go
