load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_buf//buf:defs.bzl", "buf_format")

# gazelle:prefix github.com/jaeyeom/email-validator-grpc-mcp

# Gazelle configuration
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "-build_file_name=BUILD.bazel",
        "-repo_root=.",
        "-go_naming_convention=go_default_library",
        "-go_prefix=github.com/jaeyeom/email-validator-grpc-mcp",
    ],
    prefix = "github.com/jaeyeom/email-validator-grpc-mcp",
)

# Update BUILD.bazel files
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
)

# Export buf configuration
exports_files(["buf.yaml"])

# Buf formatting for Protocol Buffer files
buf_format(
    name = "buf_format",
)
