load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jaeyeom/email-validator-grpc-mcp
# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
# gazelle:go_proto_compilers @rules_go//proto:go_proto

# Gazelle configuration
gazelle(
    name = "gazelle",
    command = "fix",
    extra_args = [
        "-build_file_name=BUILD.bazel",
        "-repo_root=.",
        "-go_prefix=github.com/jaeyeom/email-validator-grpc-mcp",
    ],
    prefix = "github.com/jaeyeom/email-validator-grpc-mcp",
)

# Update BUILD.bazel files
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Format alias
alias(
    name = "format",
    actual = "//tools/format:format",
)

exports_files(
    [
        "MODULE.bazel",
    ],
)
