module(
    name = "email_validator_grpc_mcp",
    version = "0.1.0",
)

# Bazel rules for Go
bazel_dep(name = "rules_go", version = "0.54.1")

# Configure Go version
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")
use_repo(go_sdk, "go_default_sdk")

# Gazelle for generating BUILD files
bazel_dep(name = "gazelle", version = "0.43.0")

# Protocol Buffers
bazel_dep(name = "rules_proto", version = "7.1.0")

# Protobuf
bazel_dep(name = "protobuf", version = "29.3")

# Proto gRPC rules with Buf integration
bazel_dep(name = "rules_proto_grpc_buf", version = "5.1.0")

# Buildifier for Bazel file formatting
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3")

# Buf rules for protocol buffer formatting
bazel_dep(name = "rules_buf", version = "0.4.0")

# Aspect rules for linting and formatting
bazel_dep(name = "aspect_rules_lint", version = "1.4.4")

# Configure Buf toolchain
buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# Use the latest buf CLI version
buf.toolchains(version = "v1.50.0")

# Make buf CLI available for direct usage
use_repo(buf, "rules_buf_toolchains")

# Register Go toolchains
register_toolchains("@go_default_sdk//:all")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_alicebob_miniredis_v2",
    "com_github_redis_go_redis_v9",
)
