load("@rules_proto_grpc_buf//:defs.bzl", "buf_proto_lint_test")
load("@rules_buf//buf:defs.bzl", "buf_format")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "proto_files",
    srcs = glob(["**/*.proto"]),
)

# Buf lint test for Protocol Buffer files
buf_proto_lint_test(
    name = "proto_lint",
    protos = ["//proto/email_validator:email_validator_proto"],
    use_rules = ["BASIC"],
)

# Buf format rule for Protocol Buffer files
buf_format(
    name = "format",
)
