load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "token",
    srcs = [
        "redis_storage.go",
        "storage.go",
        "token.go",
    ],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/token",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)

go_test(
    name = "token_test",
    srcs = [
        "redis_storage_test.go",
        "storage_test.go",
        "token_test.go",
    ],
    embed = [":token"],
    deps = [
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
