load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "token",
    srcs = [
        "token.go",
    ],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/token",
    visibility = ["//visibility:public"],
)

go_test(
    name = "token_test",
    size = "small",
    srcs = ["token_test.go"],
    embed = [":token"],
)
