load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "email_validator_proto",
    srcs = ["v1/email_validator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "email_validator_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/proto/email_validator/v1",
    proto = ":email_validator_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":email_validator_go_proto"],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/proto/email_validator",
    visibility = ["//visibility:public"],
)
