load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "email_validator_proto",
    srcs = ["email_validator.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "email_validator_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/proto/email_validator",
    proto = ":email_validator_proto",
    visibility = ["//visibility:public"],
)
