load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redis",
    srcs = ["redis.go"],
    importpath = "github.com/jaeyeom/email-validator-grpc-mcp/token/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//token",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)

go_test(
    name = "redis_test",
    size = "medium",
    srcs = ["redis_test.go"],
    embed = [":redis"],
    deps = [
        "//token",
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
